Fix main file; set moduleType.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "bedrock-angular-selector",
-  "main": "./app.js",
+  "main": "./selector.js",
+  "moduleType": ["amd"],
   "ignore": [],
   "dependencies": {
   }
