Add bedrock.json and related test files.

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,10 @@
   "name": "bedrock-angular-selector",
   "main": "./selector.js",
   "moduleType": ["amd"],
-  "ignore": [],
+  "ignore": [
+    "bedrock",
+    "bedrock.json"
+  ],
   "dependencies": {
   }
 }
