--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-angular-selector",
-  "version": "1.0.2",
+  "version": "1.0.3-dev",
   "main": ["./selector.js", "./selector.less"],
   "moduleType": ["amd"],
   "ignore": [],
