--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "bedrock-angular-selector",
-  "version": "1.0.3-dev",
+  "version": "2.0.0",
   "main": ["./selector.js", "./selector.less"],
   "moduleType": ["amd"],
   "ignore": [],
   "dependencies": {
-    "bedrock-angular": "^1.0.0",
-    "bedrock-angular-modal": "^1.0.0"
+    "bedrock-angular": "^2.0.0",
+    "bedrock-angular-modal": "^2.0.0"
   }
 }
