--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-angular-selector",
-  "version": "2.0.0",
+  "version": "2.0.1-dev",
   "main": ["./selector.js", "./selector.less"],
   "moduleType": ["amd"],
   "ignore": [],
